--- a/src/app/parte1/parte1.component.html
+++ b/src/app/parte1/parte1.component.html
@@ -1,1 +1,9 @@
-<p>parte1 works!</p>
+<div class="card-space">
+    <mat-card>
+        <mat-card-header>
+            <h1>PARTE 1</h1>
+        </mat-card-header>
+        <mat-card-content>
+        </mat-card-content>
+    </mat-card>
+</div>
