--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-parte2></app-parte2>
-<app-parte1></app-parte1>
+<app-header></app-header>
+<div class="container">
+        <app-parte2></app-parte2>
+        <app-parte1></app-parte1>
+</div>
 <router-outlet></router-outlet>
