--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <app-header></app-header>
-<div class="container">
-        <app-parte2></app-parte2>
-        <app-parte1></app-parte1>
+<div class="container-fluid">
+  <div class="row ">
+    <app-parte2></app-parte2>
+
+    <div class="col-5 align-self-center">
+      <app-parte1></app-parte1>
+    </div>
+  </div>
 </div>
 <router-outlet></router-outlet>
