--- a/src/app/parte1/parte1.component.html
+++ b/src/app/parte1/parte1.component.html
@@ -1,9 +1,28 @@
 <div class="card-space">
     <mat-card>
         <mat-card-header>
-            <h1>PARTE 1</h1>
+            <h1>Indice CERTO</h1>
+            <mat-icon>info</mat-icon>
+            <span class="space"></span>
+            <mat-icon>more_vert</mat-icon>
         </mat-card-header>
         <mat-card-content>
+            <mat-list>
+                <mat-list-item>
+                    <span class="product">Débito Automatico</span>
+                    <span>20</span>
+                </mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item>
+                    <span class="product">cliente CERTO</span>
+                    <span>69</span>
+                </mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item>
+                    <span class="product">Consignado</span>
+                    <span class="amount">70</span>
+                </mat-list-item>
+              </mat-list>
         </mat-card-content>
     </mat-card>
 </div>
