--- a/src/app/parte1/parte1.component.scss
+++ b/src/app/parte1/parte1.component.scss
@@ -1,7 +1,26 @@
+@import '../../styles.scss';
+
 .mat-card {
     border: 1px black;
+    font-size: 16px;
 }
 
 .card-space {
-    margin: 5px;
+    margin-bottom: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
+
 }
+
+.space {
+    flex: 1 1 auto;
+}
+
+.product {
+    display: inline;
+}
+
+.amount {
+    align-items: end;
+}
+  
