--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,9 @@ $default: #DE1919;
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.container {
-    flex: auto;
-    margin: 100px;
-    padding: 20px;
+h1 {
+    font-size: 16px;
+    font-weight: bold;
 }
+
 
