--- a/src/app/parte1/parte1.component.html
+++ b/src/app/parte1/parte1.component.html
@@ -1,28 +1,80 @@
 <div class="card-space">
-    <mat-card>
-        <mat-card-header>
-            <h1>Indice CERTO</h1>
-            <mat-icon>info</mat-icon>
-            <span class="space"></span>
-            <mat-icon>more_vert</mat-icon>
-        </mat-card-header>
-        <mat-card-content>
-            <mat-list>
-                <mat-list-item>
-                    <span class="product">Débito Automatico</span>
-                    <span>20</span>
-                </mat-list-item>
-                <mat-divider></mat-divider>
-                <mat-list-item>
-                    <span class="product">cliente CERTO</span>
-                    <span>69</span>
-                </mat-list-item>
-                <mat-divider></mat-divider>
-                <mat-list-item>
-                    <span class="product">Consignado</span>
-                    <span class="amount">70</span>
-                </mat-list-item>
-              </mat-list>
-        </mat-card-content>
-    </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <h1>Indice CERTO</h1>
+      <mat-icon>info</mat-icon>
+      <span class="space"></span>
+      <mat-icon>more_vert</mat-icon>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="row align-items-center">
+        <div class="col">
+          <h2>Chamas</h2>
+          <p class="sum">1235,02</p>
+        </div>
+        <div class="col">
+          <h2>Quadrante Atual</h2>
+          <p class="actual">A</p>
+        </div>
+      </div>
+      <table class="table mt-3">
+        <tbody>
+          <tr>
+            <td colspan="4">Débito Automático</td>
+            <td>
+              <span
+                ><img
+                  class="logo"
+                  src="../../assets/img/logo-santander-icon-.png" /></span
+              >20,00
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">Cliente CERTO</td>
+            <td>
+              <span
+                ><img
+                  class="logo"
+                  src="../../assets/img/logo-santander-icon-.png" /></span
+              >69,00
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">Consignado</td>
+            <td>
+              <span
+                ><img
+                  class="logo"
+                  src="../../assets/img/logo-santander-icon-.png" /></span
+              >70,99
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">Kgiro</td>
+            <td>
+              <span>
+                <img
+                  class="logo"
+                  src="../../assets/img/logo-santander-icon-.png"
+                />
+              </span>
+              0
+            </td>
+          </tr>
+          <tr>
+            <td colspan="4">Gestão Preventiva</td>
+            <td>
+              <span>
+                <img
+                  class="logo"
+                  src="../../assets/img/logo-santander-icon-.png"
+                />
+              </span>
+              60,28
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </mat-card-content>
+  </mat-card>
 </div>
