--- a/src/app/parte1/parte1.component.scss
+++ b/src/app/parte1/parte1.component.scss
@@ -16,11 +16,31 @@
     flex: 1 1 auto;
 }
 
-.product {
-    display: inline;
+table {
+    width: 90%;
+    height: 30%;
+    overflow-x: auto;
 }
 
-.amount {
-    align-items: end;
+td {
+    color: #575353;
+}
+
+.sum {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.actual {
+    font-size: 30px;
+    color: greenyellow;
+    font-weight: bold;
+}
+
+.logo {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+    align-items: center;
 }
   
