--- a/src/app/parte1/parte1.component.html
+++ b/src/app/parte1/parte1.component.html
@@ -19,17 +19,17 @@
       </div>
       <table class="table mt-3">
         <tbody>
-          <tr>
-            <td colspan="4">Débito Automático</td>
+          <tr *ngFor="let product of products">
+            <td colspan="4">{{ product.product }}</td>
             <td>
-              <span
+              <span *ngIf="product.amount !== 0"
                 ><img
                   class="logo"
                   src="../../assets/img/logo-santander-icon-.png" /></span
-              >20,00
+              >{{product.amount}}
             </td>
           </tr>
-          <tr>
+        <!--   <tr>
             <td colspan="4">Cliente CERTO</td>
             <td>
               <span
@@ -72,7 +72,7 @@
               </span>
               60,28
             </td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </mat-card-content>
