--- a/src/app/parte2/parte2.component.html
+++ b/src/app/parte2/parte2.component.html
@@ -1,10 +1,34 @@
-  
         <div class="card-space">
             <mat-card>
                 <mat-card-header>
-                    <h1>PARTE 2</h1>
+                    <h1>Gestão de Check-In/Check-out</h1>
+                    <mat-icon>info</mat-icon>
+                    <span class="space"></span>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Período</mat-label>
+                        <input matInput placeholder="Período">
+                        <mat-icon matSuffix>calendar_today</mat-icon>
+                      </mat-form-field>
                 </mat-card-header>
                 <mat-card-content>
+                    <div class="row">
+                        <div class="col">
+                            <h2>Abertura e Fechamento das lojas</h2>
+                            <div class="row align-items-center">
+                                <div class="col-6">
+                                    <div class="chart-container">
+                                        <canvas id="MyChart">{{ chart }}</canvas>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    Bar code
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <h2>Atividades Mensais</h2>
+                        </div>
+                    </div>
                 </mat-card-content>
             </mat-card>
         </div>
