--- a/src/app/parte2/parte2.component.scss
+++ b/src/app/parte2/parte2.component.scss
@@ -11,3 +11,13 @@
     margin-right: 50px;
 
 }
+
+.space {
+    flex: 1 1 auto;
+}
+
+.chart-container {
+    display: block;
+    width: 300px;
+    height: 300px;
+}
