--- a/src/app/parte1/parte1.component.html
+++ b/src/app/parte1/parte1.component.html
@@ -1,4 +1,4 @@
-<div class="card-space">
+<div class="card-space mt-2">
   <mat-card>
     <mat-card-header>
       <h1>Indice CERTO</h1>
@@ -17,25 +17,30 @@
           <p class="actual">A</p>
         </div>
       </div>
-      <table class="table mt-3">
-        <tbody>
-          <tr *ngFor="let product of products">
-            <td colspan="5">{{ product.product }}</td>
-            <td>
-              <span *ngIf="product.amount == '0,00'"
-                ><img
-                  class="logo"
-                  src="../../assets/img/gray-logo-santander.jpeg" /></span
-              >
-              <span *ngIf="product.amount !== '0,00'"
-                ><img
-                  class="logo"
-                  src="../../assets/img/logo-santander-icon-.png" /></span
-              >{{product.amount}}
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="tbodyDiv">
+        <table class="table table-fixed mt-3">
+          <thead>
+          </thead>
+          <tbody>
+            <tr *ngFor="let product of products">
+              <td colspan="5">{{ product.product }}</td>
+              <td>
+                <span *ngIf="product.amount == '0,00'"
+                  ><img
+                    class="logo"
+                    src="../../assets/img/gray-logo-santander.jpeg" /></span
+                >
+                <span *ngIf="product.amount !== '0,00'"
+                  ><img
+                    class="logo"
+                    src="../../assets/img/logo-santander-icon-.png" /></span
+                >{{product.amount}}
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      
     </mat-card-content>
   </mat-card>
 </div>
