--- a/src/app/parte2/parte2.component.html
+++ b/src/app/parte2/parte2.component.html
@@ -11,16 +11,16 @@
                       </mat-form-field>
                 </mat-card-header>
                 <mat-card-content>
-                    <div class="row">
+                    <div class="row mb-2 pb-2">
                         <div class="col">
                             <h2>Abertura e Fechamento das lojas</h2>
                             <div class="row align-items-center">
-                                <div class="col-6">
+                                <div class="col-8">
                                     <div class="chart-container">
                                         <canvas id="MyChart">{{ chart }}</canvas>
                                     </div>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-4">
                                     Bar code
                                 </div>
                             </div>
