--- a/src/app/parte2/parte2.component.scss
+++ b/src/app/parte2/parte2.component.scss
@@ -21,3 +21,13 @@
     width: 300px;
     height: 300px;
 }
+
+h1 {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 16px;
+    color: gray;
+}
