--- a/src/app/parte2/parte2.component.scss
+++ b/src/app/parte2/parte2.component.scss
@@ -1,33 +1,38 @@
-@import '../../styles.scss';
-
+@import "../../styles.scss";
 
 .mat-card {
-    border: 1px black;
+  border: 2px black;
 }
 
 .card-space {
-    margin-bottom: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
-
+  margin-bottom: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .space {
-    flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
 .chart-container {
+  display: block;
+  width: 300px;
+  height: 300px;
+}
+
+.chart-container-atividades {
     display: block;
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
 }
 
 h1 {
-    font-size: 18px;
-    font-weight: bold;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 h2 {
-    font-size: 16px;
-    color: gray;
+  font-size: 16px;
+  color: gray;
+  margin-bottom: 15px;
 }
