--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,8 @@ $color: #08c0c0;
 $default: #DE1919;
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(233, 232, 230); }
+
 
 
 
